Fix source alignment on desktop

--- a/galleria-slideshow-site/src/routes/$paintingName.module.css
+++ b/galleria-slideshow-site/src/routes/$paintingName.module.css
@@ -66,6 +66,8 @@
 @screen tablet {
   .current-info {
     --section-space: 1.5rem;
+
+    margin-top: 4.6875rem;
   }
 
   .current-info__name {
@@ -278,11 +280,13 @@
 }
 
 .description__source-container {
+  @apply text-link-2;
+
   margin-top: 4.25rem;
 }
 
 .description__source {
-  @apply text-link-2 transition-colors;
+  @apply transition-colors;
 
   margin-top: 1rem;
 
@@ -323,7 +327,7 @@
 @screen desktop {
   .description-container {
     grid-column: 7 / -1;
-    grid-row: 1 / -1;
+    grid-row: 1 / 3;
     display: grid;
     grid-template:
       ". ." 7.1875rem
@@ -333,11 +337,15 @@
 
   .description__text {
     justify-self: start;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
     max-width: 21.875rem;
   }
 
   .description__source-container {
-    margin-top: 5rem;
+    margin-top: auto;
+    transform: translateY(100%);
   }
 }
 
